--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.12.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
