--- a/api/package.json
+++ b/api/package.json
@@ -13,13 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose": "^5.10.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.12.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.33"
   }
