--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "ts-node ./src/index.ts",
     "prestart": "tsc",
     "start": "node ./dist/index.js"
@@ -14,11 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/node": "^14.14.33"
+    "@types/jest": "^26.0.21",
+    "@types/node": "^14.14.33",
+    "@types/supertest": "^2.0.10"
   }
 }
