--- a/api/package.json
+++ b/api/package.json
@@ -20,7 +20,8 @@
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "mongoose": "^5.12.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
