--- a/api/package.json
+++ b/api/package.json
@@ -13,17 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/mongoose": "^5.10.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jest": "^26.6.3",
+    "mongoose": "^5.12.2",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3",
-    "mongoose": "^5.12.2"
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.10.4",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
