Add docker hot reload

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,7 @@
-FROM node:12.11-alpine
-ENTRYPOINT npm start
+FROM node:12.11
+ENTRYPOINT lsyncd -rsync /angular-app /angular-serve && sleep 10 && npm start
+WORKDIR /angular-serve
 RUN mkdir /angular-app
-WORKDIR /angular-app
 COPY . /angular-app
-RUN npm install
-RUN npm build
+RUN cd /angular-app && npm install && npm run build
+RUN apt-get update && apt-get install -y lsyncd
