--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,15 @@ services:
       - mongo
     ports:
       - "5000:5000"
-
+    volumes:
+      - ./api/src:/express-app/src
   app:
     build: app
     depends_on:
       - api
     ports:
       - "4200:4200"
-
+    volumes:
+      - ./app/src:/angular-app/src
   mongo:
     image: mongo:4.4.4
