--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,7 @@
-FROM node:12.11-alpine
-ENTRYPOINT npm start
+FROM node:12.11
+ENTRYPOINT lsyncd -rsync /express-app /express-serve && sleep 10 && npm run dev
+WORKDIR /express-serve
 RUN mkdir /express-app
-WORKDIR /express-app
 COPY . /express-app
-RUN npm install
+RUN cd /express-app && npm install
+RUN apt-get update && apt-get install -y lsyncd
