--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "ts-node ./src/index.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/index.ts",
     "prestart": "tsc",
     "start": "node ./dist/index.js"
   },
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
     "@types/node": "^14.14.33",
-    "@types/supertest": "^2.0.10"
+    "@types/supertest": "^2.0.10",
+    "nodemon": "^2.0.7"
   }
 }
