--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "mongoose": "^5.12.2",
+    "socket.io": "^4.0.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
