fixing test files

--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "testci": "ng test --sourceMap=false --browsers=ChromeHeadless --watch=false",
@@ -29,9 +29,9 @@
     "@angular-devkit/build-angular": "~0.1102.4",
     "@angular/cli": "~11.2.4",
     "@angular/compiler-cli": "~11.2.5",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
