--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,7 +2,8 @@
 	"compilerOptions": {
 	  "sourceMap": true,
 	  "outDir": "./dist",
-	  "baseUrl": "./src"
+	  "baseUrl": "./src",
+		"lib": [ "es2015" ]
 	},
 	"include": [
 	  "src/**/*.ts",
